--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -75,7 +75,19 @@
 				<li>
 					<a href="Arrays.html">Arrays</a>
 					<ul class="chapter_items">
-						<li>Arrays</li>
+						<li>Declare an Array</li>
+						<li>Array Examples</li>
+						<li>Access Elements of an Array</li>
+						<li>Change Elements of an Array</li>
+						<li>Array Initialization</li>
+						<li>Initialize Only Specific Elements</li>
+						<li>Find the Length of an Array</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Slice.html">Slice</a>
+					<ul class="chapter_items">
+						<li>Slice</li>
 					</ul>
 				</li>
 				<li>
