--- a/index.html
+++ b/index.html
@@ -7,8 +7,41 @@
 	<link rel="stylesheet" type="text/css" href="Assets/Style.css">
 </head>
 <body>
+<style type="text/css">
+.text_style_1{
+	text-shadow:
+  0 1px 0px #378ab4,
+  1px 0 0px #5dabcd,
+  1px 2px 1px #378ab4,
+  2px 1px 1px #5dabcd,
+  2px 3px 2px #378ab4,
+  3px 2px 2px #5dabcd,
+  3px 4px 2px #378ab4,
+  4px 3px 3px #5dabcd,
+  4px 5px 3px #378ab4,
+  5px 4px 2px #5dabcd,
+  5px 6px 2px #378ab4,
+  6px 5px 2px #5dabcd,
+  6px 7px 1px #378ab4,
+  7px 6px 1px #5dabcd,
+  7px 8px 0px #378ab4,
+  8px 7px 0px #5dabcd;
+}
+.center{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.font_40{
+	font-size: 40px;
+	cursor: pointer;
+}
+</style>
 <div class="page card">
 
+	<div class="center" style="padding-bottom: 50px;">
+		<a class="text_style_1 font_40" href="Go/TOC.html">Go</a><br>
+	</div>
 	<div class="card table_of_content">
 		<h1>Front-End Engineering</h1>
 		<div>
@@ -56,7 +89,7 @@
 	<a href="Flutter/TOC.html">Flutter</a><br>
 	<a href="Node.js/TOC.html">Node.js</a><br>
 	<a href="Express/TOC.html">Express</a><br>
-	<a href="Go/TOC.html">Go</a><br>
+	
 	<a href="Solana/TOC.html">Solana</a><br>
 	
 	<br>
