--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -87,7 +87,15 @@
 				<li>
 					<a href="Slice.html">Slice</a>
 					<ul class="chapter_items">
-						<li>Slice</li>
+						<li>Create a Slice With []datatype{values}</li>
+						<li>Length and Capacity of a Slice</li>
+						<li>Create a Slice From an Array</li>
+						<li>Create a Slice With The make() Function</li>
+						<li>Access Elements of a Slice</li>
+						<li>Change Elements of a Slice</li>
+						<li>Append Elements To a Slice</li>
+						<li>Append One Slice To Another Slice</li>
+						<li>Change The Length of a Slice</li>
 					</ul>
 				</li>
 				<li>
