--- a/Go/Slice.html
+++ b/Go/Slice.html
@@ -11,7 +11,520 @@
 
 
 <h1>Go Slices</h1>
-<p>Slices are similar to arrays, but are more powerful and flexible. Like arrays, slices are also used to store multiple values of the same type in a single variable. However, unlike arrays, the length of a slice can grow and shrink as you see fit.</p>
+<p>Slices are similar to arrays, but are more powerful and flexible. Like arrays, slices are also used to store multiple values of the same type in a single variable. However, unlike arrays, the length of a slice can grow and shrink as you see fit. In practice, slices are much more common than arrays.</p>
+<p>In Go, there are several ways to create a slice:</p>
+<ol>
+	<li>Using the <code>[]datatype{values}</code> format</li>
+	<li>Create a slice from an array</li>
+	<li>Using the <code>make()</code> function</li>
+</ol>
+
+
+
+<h1>Create a Slice With []datatype{values}</h1>
+<p>The type <code>[]T</code> is a slice with elements of type <code>T</code>.</p>
+<p>A common way of declaring a slice is like this:</p>
+<pre>
+slice_name := []datatype{values}
+</pre>
+<p>For example:</p>
+<pre>
+myslice := []int{}
+</pre>
+<p>The code above declares an empty slice of <code>0</code> length and <code>0</code> capacity. To initialize the slice during declaration, use this:</p>
+<pre>
+myslice := []int{1,2,3}
+</pre>
+<p>The code above declares a slice of integers of length <code>3</code> and also the capacity of <code>3</code>.</p>
+
+
+<h3>Slice literals</h3>
+<p>A slice literal is like an array literal without the length. This is an array literal:</p>
+<pre>
+[3]bool{true, true, false}
+</pre>
+<p>And this creates the same array as above, then builds a slice that references it:</p>
+<pre>
+[]bool{true, true, false}
+</pre>
+
+
+<h3>Length and Capacity of a Slice</h3>
+<p>A slice has both a length and a capacity.</p>
+<p>In Go, there are two functions that can be used to return the length and capacity of a slice:</p>
+<ol>
+	<li><code>len()</code> function - returns the length of the slice (the number of elements in the slice)</li>
+	<li><code>cap()</code> function - returns the capacity of the slice (the number of elements the slice can grow or shrink to).  The capacity of a slice is the number of elements in the underlying array, counting from the first element in the slice.</li>
+</ol>
+
+
+<h3>Example</h3>
+<p>This example shows how to create slices using the <code>[]datatype{values}</code> format:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	myslice1 := []int{}
+	fmt.Println(len(myslice1))
+	fmt.Println(cap(myslice1))
+	fmt.Println(myslice1)
+
+	myslice2 := []string{"Go", "Slices", "Are", "Powerful"}
+	fmt.Println(len(myslice2))
+	fmt.Println(cap(myslice2))
+	fmt.Println(myslice2)
+}
+</pre>
+<p>Output:</p>
+<pre>
+0
+0
+[]
+4
+4
+[Go Slices Are Powerful]
+</pre>
+<p>In the example above, we see that in the first slice (myslice1), the actual elements are not specified, so both the length and capacity of the slice will be zero. In the second slice (myslice2), the elements are specified, and both length and capacity is equal to the number of actual elements specified.</p>
+<p>Here is another example:</p>
+<pre>
+import "fmt"
+
+func main() {
+	q := []int{2, 3, 5, 7, 11, 13}
+	fmt.Println(q)
+
+	r := []bool{true, false, true, true, false, true}
+	fmt.Println(r)
+
+	s := []struct {
+		i int
+		b bool
+	}{
+		{2, true},
+		{3, false},
+		{5, true},
+		{7, true},
+		{11, false},
+		{13, true},
+	}
+	fmt.Println(s)
+}
+</pre>
+<p>Ouput:</p>
+<pre>
+[2 3 5 7 11 13]
+[true false true true false true]
+[{2 true} {3 false} {5 true} {7 true} {11 false} {13 true}]
+</pre>
+
+
+
+
+<h1>Create a Slice From an Array</h1>
+<p>You can create a slice by slicing an array:</p>
+<pre>
+var myarray = [length]datatype{values} // An array
+myslice := myarray[start:end] // A slice made from the array
+</pre>
+<p>This example shows how to create a slice from an array:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	arr1 := [6]int{10, 11, 12, 13, 14,15}
+	myslice := arr1[2:4]
+
+	fmt.Printf("myslice = %v\n", myslice)
+	fmt.Printf("length = %d\n", len(myslice))
+	fmt.Printf("capacity = %d\n", cap(myslice))
+}
+</pre>
+<p>Output:</p>
+<pre>
+myslice = [12 13]
+length = 2
+capacity = 4
+</pre>
+<p>In the example above <code>myslice</code> is a slice with length <code>2</code>. It is made from <code>arr1</code> which is an array with length <code>6</code>.</p>
+<p>The slice starts from the third element of the array which has value <code>12</code> (remember that array indexes start at <code>0</code>. That means that <code>[0]</code> is the first element, <code>[1]</code> is the second element, etc.). The slice can grow to the end of the array. This means that the capacity of the slice is <code>4</code>.</p>
+<p>If <code>myslice</code> started from element <code>0</code>, the slice capacity would be <code>6</code>.</p>
+
+<h3>Slice defaults</h3>
+<p>When slicing, you may omit the high or low bounds to use their defaults instead. The default is zero for the low bound and the length of the slice for the high bound.</p>
+<p>For the array</p>
+<pre>
+var a [10]int
+</pre>
+<p>these slice expressions are equivalent:</p>
+<pre>
+a[0:10]
+a[:10]
+a[0:]
+a[:]
+</pre>
+<p>Here is an example:</p>
+<pre>
+package main
+import "fmt"
+
+func main() {
+	s := []int{2, 3, 5, 7, 11, 13}
+
+	s = s[1:4]
+	fmt.Println(s)
+
+	s = s[:2]
+	fmt.Println(s)
+
+	s = s[1:]
+	fmt.Println(s)
+}
+</pre>
+<p>Ouput:</p>
+<pre>
+[3 5 7]
+[3 5]
+[5]
+</pre>
+
+
+
+
+<h1>Create a Slice With The make() Function</h1>
+<p>The <code>make()</code> function can also be used to create a slice.</p>
+<pre>
+slice_name := make([]type, length, capacity)
+</pre>
+<p><b>Note</b>: If the capacity parameter is not defined, it will be equal to length.</p>
+<p>This example shows how to create slices using the <code>make()</code> function:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	myslice1 := make([]int, 5, 10)
+	fmt.Printf("myslice1 = %v\n", myslice1)
+	fmt.Printf("length = %d\n", len(myslice1))
+	fmt.Printf("capacity = %d\n", cap(myslice1))
+
+	// with omitted capacity
+	myslice2 := make([]int, 5)
+	fmt.Printf("myslice2 = %v\n", myslice2)
+	fmt.Printf("length = %d\n", len(myslice2))
+	fmt.Printf("capacity = %d\n", cap(myslice2))
+}
+</pre>
+<p>Output:</p>
+<pre>
+myslice1 = [0 0 0 0 0]
+length = 5
+capacity = 10
+myslice2 = [0 0 0 0 0]
+length = 5
+capacity = 5
+</pre>
+<p>Here is another example:</p>
+<pre>
+package main
+import "fmt"
+
+func main() {
+	a := make([]int, 5)
+	printSlice("a", a)
+
+	b := make([]int, 0, 5)
+	printSlice("b", b)
+
+	c := b[:2]
+	printSlice("c", c)
+
+	d := c[2:5]
+	printSlice("d", d)
+}
+
+func printSlice(s string, x []int) {
+	fmt.Printf("%s len=%d cap=%d %v\n",
+		s, len(x), cap(x), x)
+}
+</pre>
+<p>Output:</p>
+<pre>
+a len=5 cap=5 [0 0 0 0 0]
+b len=0 cap=5 []
+c len=2 cap=5 [0 0]
+d len=3 cap=3 [0 0 0]
+</pre>
+
+
+
+
+
+
+
+
+
+<h1>Access Elements of a Slice</h1>
+<p>You can access a specific slice element by referring to the index number. In Go, indexes start at <code>0</code>. That means that <code>[0]</code> is the first element, <code>[1]</code> is the second element, etc.</p>
+<p>This example shows how to access the first and third elements in the prices slice:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	prices := []int{10,20,30}
+
+	fmt.Println(prices[0])
+	fmt.Println(prices[2])
+}
+</pre>
+<p>Output:</p>
+<pre>
+10
+30
+</pre>
+
+
+
+
+
+
+<h1>Change Elements of a Slice</h1>
+<p>You can also change a specific slice element by referring to the index number.</p>
+<p>This example shows how to change the third element in the prices slice:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	prices := []int{10,20,30}
+	prices[2] = 50
+	fmt.Println(prices[0])
+	fmt.Println(prices[2])
+}
+</pre>
+<p>Output:</p>
+<pre>
+10
+50
+</pre>
+
+
+
+
+
+
+
+<h1>Append Elements To a Slice</h1>
+<p>You can append elements to the end of a slice using the <code>append()</code>function:</p>
+<pre>
+slice_name = append(slice_name, element1, element2, ...)
+</pre>
+<p>This example shows how to append elements to the end of a slice:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	myslice1 := []int{1, 2, 3, 4, 5, 6}
+	fmt.Printf("myslice1 = %v\n", myslice1)
+	fmt.Printf("length = %d\n", len(myslice1))
+	fmt.Printf("capacity = %d\n", cap(myslice1))
+
+	myslice1 = append(myslice1, 20, 21)
+	fmt.Printf("myslice1 = %v\n", myslice1)
+	fmt.Printf("length = %d\n", len(myslice1))
+	fmt.Printf("capacity = %d\n", cap(myslice1))
+}
+</pre>
+<p>Output:</p>
+<pre>
+myslice1 = [1 2 3 4 5 6]
+length = 6
+capacity = 6
+myslice1 = [1 2 3 4 5 6 20 21]
+length = 8
+capacity = 12
+</pre>
+
+
+
+
+
+
+<h1>Append One Slice To Another Slice</h1>
+<p>To append all the elements of one slice to another slice, use the <code>append()</code> function:</p>
+<pre>
+slice3 = append(slice1, slice2...)
+</pre>
+<p><b>Note</b>: The '...' after slice2 is necessary when appending the elements of one slice to another.</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	myslice1 := []int{1,2,3}
+	myslice2 := []int{4,5,6}
+	myslice3 := append(myslice1, myslice2...)
+
+	fmt.Printf("myslice3=%v\n", myslice3)
+	fmt.Printf("length=%d\n", len(myslice3))
+	fmt.Printf("capacity=%d\n", cap(myslice3))
+}
+</pre>
+<p>Output:</p>
+<pre>
+myslice3=[1 2 3 4 5 6]
+length=6
+capacity=6
+</pre>
+
+
+
+
+
+
+<h1>Change The Length of a Slice</h1>
+<p>Unlike arrays, it is possible to change the length of a slice.</p>
+<p>This example shows how to change the length of a slice:</p>
+<pre>
+package main
+import ("fmt")
+
+func main() {
+	arr1 := [6]int{9, 10, 11, 12, 13, 14} // An array
+	myslice1 := arr1[1:5] // Slice array
+	fmt.Printf("myslice1 = %v\n", myslice1)
+	fmt.Printf("length = %d\n", len(myslice1))
+	fmt.Printf("capacity = %d\n", cap(myslice1))
+
+	myslice1 = arr1[1:3] // Change length by re-slicing the array
+	fmt.Printf("myslice1 = %v\n", myslice1)
+	fmt.Printf("length = %d\n", len(myslice1))
+	fmt.Printf("capacity = %d\n", cap(myslice1))
+
+	myslice1 = append(myslice1, 20, 21, 22, 23) // Change length by appending items
+	fmt.Printf("myslice1 = %v\n", myslice1)
+	fmt.Printf("length = %d\n", len(myslice1))
+	fmt.Printf("capacity = %d\n", cap(myslice1))
+}
+</pre>
+<p>Output:</p>
+<pre>
+myslice1 = [10 11 12 13]
+length = 4
+capacity = 5
+myslice1 = [10 11]
+length = 2
+capacity = 5
+myslice1 = [10 11 20 21 22 23]
+length = 6
+capacity = 10
+</pre>
+
+
+
+
+
+
+
+<h1>Slices are like references to arrays</h1>
+<p>A slice does not store any data, it just describes a section of an underlying array. Changing the elements of a slice modifies the corresponding elements of its underlying array. Other slices that share the same underlying array will see those changes.</p>
+<pre>
+package main
+
+import "fmt"
+
+func main() {
+	names := [4]string{
+		"John",
+		"Paul",
+		"George",
+		"Ringo",
+	}
+	fmt.Println(names)
+
+	a := names[0:2]
+	b := names[1:3]
+	fmt.Println(a, b)
+
+	b[0] = "XXX"
+	fmt.Println(a, b)
+	fmt.Println(names)
+}
+</pre>
+<p>Output:</p>
+<pre>
+[John Paul George Ringo]
+[John Paul] [Paul George]
+[John XXX] [XXX George]
+[John XXX George Ringo]
+</pre>
+
+
+
+<h1>Nil slices</h1>
+<p>The zero value of a slice is <code>nil</code>. A nil slice has a length and capacity of <code>0</code> and has no underlying array.</p>
+<pre>
+package main
+import "fmt"
+
+func main() {
+	var s []int
+	fmt.Println(s, len(s), cap(s))
+	if s == nil {
+		fmt.Println("nil!")
+	}
+}
+</pre>
+<p>Ouput:</p>
+<pre>
+[] 0 0
+nil!
+</pre>
+
+
+
+
+
+<h1>Slices of slices</h1>
+<p>Slices can contain any type, including other slices.</p>
+<pre>
+package main
+import (
+	"fmt"
+	"strings"
+)
+
+func main() {
+	// Create a tic-tac-toe board.
+	board := [][]string{
+		[]string{"_", "_", "_"},
+		[]string{"_", "_", "_"},
+		[]string{"_", "_", "_"},
+	}
+
+	// The players take turns.
+	board[0][0] = "X"
+	board[2][2] = "O"
+	board[1][2] = "X"
+	board[1][0] = "O"
+	board[0][2] = "X"
+
+	for i := 0; i < len(board); i++ {
+		fmt.Printf("%s\n", strings.Join(board[i], " "))
+	}
+}
+</pre>
+<p>Output:</p>
+<pre>
+X _ X
+O _ X
+_ _ O
+</pre>
+
+
 
 
 
