--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -73,6 +73,23 @@
 					</ul>
 				</li>
 				<li>
+					<a href="Operators.html">Operators</a>
+					<ul class="chapter_items">
+						<li>Go Operators</li>
+						<li>Arithmetic operators</li>
+						<li>Assignment Operators</li>
+						<li>Comparison Operators</li>
+						<li>Logical Operators</li>
+						<li>Bitwise Operators</li>
+					</ul>
+				</li>
+				<li>
+					<a href="Conditions.html">Conditions</a>
+					<ul class="chapter_items">
+						<li>Go Conditions</li>
+					</ul>
+				</li>
+				<li>
 					<a href="Arrays.html">Arrays</a>
 					<ul class="chapter_items">
 						<li>Declare an Array</li>
@@ -87,6 +104,7 @@
 				<li>
 					<a href="Slice.html">Slice</a>
 					<ul class="chapter_items">
+						<li>Go Slices</li>
 						<li>Create a Slice With []datatype{values}</li>
 						<li>Length and Capacity of a Slice</li>
 						<li>Create a Slice From an Array</li>
@@ -96,6 +114,11 @@
 						<li>Append Elements To a Slice</li>
 						<li>Append One Slice To Another Slice</li>
 						<li>Change The Length of a Slice</li>
+						<li>Slices are like references to arrays</li>
+						<li>Nil slices</li>
+						<li>Slices of slices</li>
+						<li>Using Copy Function on Slice</li>
+						<li>Range</li>
 					</ul>
 				</li>
 				<li>
