--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -87,6 +87,10 @@
 					<a href="Conditions.html">Conditions</a>
 					<ul class="chapter_items">
 						<li>Go Conditions</li>
+						<li>The if Statement</li>
+						<li>The else Statement</li>
+						<li>The else if Statement (Else-If Ladder)</li>
+						<li>The Nested if Statement</li>
 					</ul>
 				</li>
 				<li>
