Go Switch Statement

--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -94,6 +94,19 @@
 					</ul>
 				</li>
 				<li>
+					<a href="Switch.html">Switch Statement</a>
+					<ul class="chapter_items">
+						<li>Switch Statement</li>
+						<li>The default Keyword</li>
+						<li>Values should be same data type</li>
+						<li>The Multi-case switch Statement</li>
+						<li>Switch evaluation order</li>
+						<li>Switch with no condition</li>
+						<li>Fall through</li>
+						<li>Noop case</li>
+					</ul>
+				</li>
+				<li>
 					<a href="Arrays.html">Arrays</a>
 					<ul class="chapter_items">
 						<li>Declare an Array</li>
