--- a/Go/TOC.html
+++ b/Go/TOC.html
@@ -107,6 +107,19 @@
 					</ul>
 				</li>
 				<li>
+					<a href="Loop.html">Loop</a>
+					<ul class="chapter_items">
+						<li>Go for Loop</li>
+						<li>Without Parentheses</li>
+						<li>Optional Statements</li>
+						<li>Forever</li>
+						<li>The continue Statement</li>
+						<li>The break Statement</li>
+						<li>Nested Loops</li>
+						<li>The Range Keyword</li>
+					</ul>
+				</li>
+				<li>
 					<a href="Arrays.html">Arrays</a>
 					<ul class="chapter_items">
 						<li>Declare an Array</li>
