Moved the language tutorial in subdirectory and echo framework document structure created

--- a/Go/Golang/Variables.html
+++ b/Go/Golang/Variables.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Go - Variables</title>
-    <link rel="icon" type="image/x-icon" href="../Assets/favicon.png">
-	<link rel="stylesheet" type="text/css" href="../Assets/bulma.css">
-	<link rel="stylesheet" type="text/css" href="../Assets/Style.css">
+    <link rel="icon" type="image/x-icon" href="../../Assets/favicon.png">
+	<link rel="stylesheet" type="text/css" href="../../Assets/bulma.css">
+	<link rel="stylesheet" type="text/css" href="../../Assets/Style.css">
 </head>
 <body>
 <div class="page card">
